--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-aiohttp==3.8.5
 aiosignal==1.3.1
-async-timeout==3.0.1
 attrs==23.1.0
 cfgv==3.3.1
 chardet==4.0.0
@@ -14,13 +12,16 @@ multidict==6.0.4
 nodeenv==1.8.0
 Pillow==9.5.0
 platformdirs==3.5.1
-pre-commit==2.13.0
 pyaes==1.6.1
 pyasn1==0.5.0
-pylnbits==0.0.6
+#async-timeout==3.0.1
+#pre-commit==2.13.0
+#pylnbits==0.0.6
+#aiohttp==3.7.4.post0
+#PyYAML==5.4.1
+git+https://github.com/lightningames/pylnbits.git@main#egg=pylnbits
 pypng==0.20220715.0
 python-dotenv==1.0.0
-PyYAML==5.4.1
 qrcode==7.4.2
 rsa==4.9
 Telethon==1.28.5
